hw-06-first-coplete

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
       <form class="main-form" name="main-form">
 
-        <label class="label"><span>Ім'я*</span>
+        <label class="label"><span>Ім'я</span>
           <input class="main-input" type="text" name="user-name" minlength="1" required autofocus>
           <svg class="icon-name" width="12" height="12">
             <use href="./icons/sprite.svg#icon-men"></use>
@@ -467,13 +467,11 @@
         </label>
 
         <label class="checkbox-containe">
-          <input type="checkbox" class="checkbox">
-
           <div class="checkbox-container">
+            <input type="checkbox" class="checkbox is-hidden">
             <svg class="icon-galochka" width="11" height="8">
               <use href="./icons/sprite.svg#icon-galochka"></use>
             </svg>
-
             <p class="modal-text">Погоджуюся з розсилкою та приймаю <a class="modal-link" href="#"> Умови
                 договору</a></p>
           </div>
@@ -482,6 +480,8 @@
         <button type="submit" class="modal-btn">
           Відправити</button>
       </form>
+
+
 
 
     </div>
