--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
   </footer>
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="close-icon" data-modal-close>
-        <svg class="close-icon" width="11" height="11">
-          <use href="./icons/sprite.svg#icon-close-black"></use>
+      <button class="close-icon" type="button" data-modal-close>
+        <svg class="modal-close-icon" width="11" height="11">
+          <use class="modal-icon-link" href="./icons/sprite.svg#close-black"></use>
         </svg>
       </button>
       <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
@@ -461,24 +461,23 @@
           </svg>
         </label>
 
-        <label>
+        <div>
           <p class="label">Коментар</p>
-          <textarea class="comment" name="texarea" id="" placeholder="Введіть текст..."></textarea>
-        </label>
+          <textarea class="comment" name="texarea" placeholder="Введіть текст..."></textarea>
+        </div>
 
-        <label class="checkbox-containe">
-          <div class="checkbox-container">
-            <input type="checkbox" class="checkbox is-hidden">
-            <svg class="icon-galochka" width="11" height="8">
-              <use href="./icons/sprite.svg#icon-galochka"></use>
-            </svg>
-            <p class="modal-text">Погоджуюся з розсилкою та приймаю <a class="modal-link" href="#"> Умови
-                договору</a></p>
-          </div>
+        <label class="checkbox-container">
+          <input type="checkbox" class="checkbox is-hidden">
+          <svg class="icon-galochka" width="11" height="8">
+            <use href="./icons/sprite.svg#icon-galochka"></use>
+          </svg>
         </label>
+        <div class="modal-btn-container">
+          <p class="modal-text">Погоджуюся з розсилкою та приймаю <a class="modal-link" href="#"> Умови
+              договору</a></p>
+          <button type="submit" class="modal-btn"> Відправити</button>
+        </div>
 
-        <button type="submit" class="modal-btn">
-          Відправити</button>
       </form>
 
 
