--- a/portfolio.html
+++ b/portfolio.html
@@ -244,7 +244,7 @@
   <footer class="footer">
     <div class="container footer-content">
 
-      <div class="footer-box">
+      <div class="footer-adress">
         <a class="logo link" href="./index.html">Web<span class="logo-color-footer">Studio</span></a>
         <address class="adress footer-link">
           <p class="adress-text">м. Київ, пр-т Лесі Українки, 26</p>
@@ -256,7 +256,7 @@
         </address>
       </div>
 
-      <div class="footer-box">
+      <div class="footer-social">
         <p class="footer-text">Приєднуйтесь</p>
         <ul class="footer-links list ">
           <li class="footer-li">
@@ -293,7 +293,17 @@
         </ul>
       </div>
 
-
+      <div class="footer-input-container">
+        <p class="footer-input-text">Підпишіться на розсилку</p>
+        <form class="footer-form">
+          <input class="footer-input" name="user-email" type="email" placeholder="E-mail" required>
+          <button class="footer-button" type="submit">
+            <svg class="footer-icon-send" width="24" height="24">
+              <use href="./icons/sprite.svg#icon-send"></use>
+            </svg>
+            Підписатися</button>
+        </form>
+      </div>
     </div>
   </footer>
 
