hw-09-try-03-or-04

--- a/index.html
+++ b/index.html
@@ -465,23 +465,24 @@
           <textarea class="comment" name="texarea" placeholder="Введіть текст..."></textarea>
         </div>
 
-        <label class="checkbox-container">
-          <input type="checkbox" class="checkbox is-hidden">
-          <svg class="icon-galochka" width="11" height="8">
-            <use href="./icons/sprite.svg#icon-galochka"></use>
-          </svg>
-        </label>
-        <div class="modal-btn-container">
-          <p class="modal-text">Погоджуюся з розсилкою та приймаю <a class="modal-link" href="#"> Умови
-              договору</a></p>
+        <div class="checkbox-container">
+
+
+
+          <label class="modal-text">
+            <input type="checkbox" class="checkbox is-hidden">
+            <span>
+              <svg class="icon-galochka" width="11" height="8">
+                <use href="./icons/sprite.svg#icon-galochka"></use>
+              </svg>
+            </span>
+            Погоджуюся з розсилкою та приймаю <a class="modal-link" href="#">
+              Умови договору</a>
+          </label>
           <button type="submit" class="modal-btn"> Відправити</button>
         </div>
 
       </form>
-
-
-
-
     </div>
   </div>
   <script src="./js/modal.js"></script>
